--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "express": "^4.13.4",
     "method-override": "^2.1.3",
     "mongoose": "^4.4.12",
-    "morgan": "^1.1.1"
+    "morgan": "^1.1.1",
+    "requirejs": "2.3.2"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1"
   }
 }
