--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "method-override": "^2.1.3",
     "mongoose": "^4.4.12",
     "morgan": "^1.1.1",
-    "requirejs": "2.3.2"
+    "requirejs": "2.3.2",
+    "systemjs": "0.19.41"
   },
   "devDependencies": {
     "gulp": "^3.9.1"
