WIP - angular 2 upgrade basic code - systemjs can't import @angular

--- a/package.json
+++ b/package.json
@@ -4,6 +4,14 @@
   "description": "Simple todo application.",
   "main": "server.js",
   "author": "Scotch",
+  "scripts": {
+    "start": "concurrently \"npm run tsc:w\" \"node server.js\" ",    
+    "tsc": "tsc",
+    "tsc:w": "tsc -w",
+    "lite": "lite-server",
+    "typings": "typings",
+    "postinstall": "typings install" 
+  },
   "dependencies": {
     "body-parser": "^1.4.3",
     "express": "^4.13.4",
@@ -11,9 +19,24 @@
     "mongoose": "^4.4.12",
     "morgan": "^1.1.1",
     "requirejs": "2.3.2",
-    "systemjs": "0.19.41"
+    "systemjs": "0.19.41",
+    "@angular/core": "2.4.3",
+    "@angular/upgrade": "2.4.3",
+    "@angular/compiler": "2.4.3",
+    "@angular/platform-browser": "2.4.3",
+    "@angular/platform-browser-dynamic": "2.4.3",
+    "@angular/common": "2.4.3",
+    "es6-promise": "4.0.5",
+    "es6-shim": "0.35.2",
+    "reflect-metadata": "0.1.9",
+    "rxjs": "5.0.3",
+    "zone.js": "0.7.5" 
   },
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "concurrently": "^2.0.0",
+    "lite-server": "^2.1.0",
+    "typescript": "^1.8.2",
+    "typings":"^0.6.8"
   }
 }
