--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "requirejs": "2.3.2",
     "rxjs": "5.0.3",
     "systemjs": "0.19.41",
-    "zone.js": "0.7.5"
+    "zone.js": "0.7.5",
+    "angular": "1.6.1"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
