--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "lite-server": "^2.1.0",
-    "typescript": "^1.8.2",
+    "typescript": "2.1.5",
     "typings": "^0.6.8"
   }
 }
