--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "postinstall": "typings install"
   },
   "dependencies": {
+    "requirejs": "2.3.3",
+    "rxjs": "5.2.0",
+    "systemjs": "0.20.9",
+    "zone.js": "0.7.5",
+    "angular": "1.6.1",
     "@angular/common": "2.4.3",
     "@angular/compiler": "2.4.3",
     "@angular/core": "2.4.3",
@@ -27,19 +32,14 @@
     "method-override": "^2.1.3",
     "mongoose": "^4.4.12",
     "morgan": "^1.1.1",
-    "reflect-metadata": "0.1.9",
-    "requirejs": "2.3.2",
-    "rxjs": "5.0.3",
-    "systemjs": "0.19.41",
-    "zone.js": "0.7.5",
-    "angular": "1.6.1"
+    "reflect-metadata": "0.1.9"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "lite-server": "^2.1.0",
-    "typescript": "2.1.5",
-    "typings": "^0.6.8"
+    "typescript": "2.2.1",
+    "typings": "2.1.0"
   }
 }
