--- a/package.json
+++ b/package.json
@@ -18,27 +18,38 @@
     "systemjs": "0.20.9",
     "zone.js": "0.7.5",
     "angular": "1.6.1",
-    "@angular/common": "2.4.3",
-    "@angular/compiler": "2.4.3",
-    "@angular/core": "2.4.3",
-    "@angular/platform-browser": "2.4.3",
-    "@angular/platform-browser-dynamic": "2.4.3",
-    "@angular/upgrade": "2.4.3",
-    "app-root-path": "^2.0.1",
-    "body-parser": "^1.4.3",
+    "reflect-metadata": "0.1.9",
     "es6-promise": "4.0.5",
     "es6-shim": "0.35.2",
+    "es-module-loader": "2.1.2",
+    "@angular/common": "2.4.9",
+    "@angular/compiler": "2.4.9",
+    "@angular/core": "2.4.9",
+    "@angular/platform-browser": "2.4.9",
+    "@angular/platform-browser-dynamic": "2.4.9",
+    "@angular/upgrade": "2.4.9",
+    "app-root-path": "^2.0.1",
+    "body-parser": "^1.4.3",
     "express": "^4.13.4",
     "method-override": "^2.1.3",
     "mongoose": "^4.4.12",
-    "morgan": "^1.1.1",
-    "reflect-metadata": "0.1.9"
+    "morgan": "^1.1.1"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
-    "lite-server": "^2.1.0",
+    "lite-server": "^2.2.2",
+    "rollup-plugin-alias": "^1.2.0",
+    "rollup-plugin-angular": "^0.4.4",
+    "rollup-plugin-cleanup": "1.0.0",
+    "rollup-plugin-commonjs": "7.0.0",
+    "rollup-plugin-includepaths": "^0.1.8",
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-node-resolve-auto": "^1.0.1",
+    "rollup-plugin-replace": "^1.1.1",
+    "rollup-plugin-typescript": "^0.8.1",
+    "rollup-plugin-uglify": "^1.0.1",
     "typescript": "2.2.1",
     "typings": "2.1.0"
   }
